--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@prisma/client": "^4.12.0",
     "bcrypt": "^5.1.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-themes": "^1.2.28"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
